Adds new record update page.

--- a/styles/index.processed.css
+++ b/styles/index.processed.css
@@ -225,3 +225,33 @@ table {
 .patient-info td {
   padding: 5px;
 }
+
+.save-record-button-container {
+  display: inline-block;
+  float: right;
+}
+
+.save-record-button {
+  margin-top: 15px;
+  font-size: 30px;
+  color: #006b97;
+  background: none;
+  border: none;
+}
+
+.save-record-button:hover {
+  color: #78c6ed;
+  cursor: pointer;
+}
+
+.success-message {
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: -8px;
+  width: 25%;
+  padding: 5px;
+  color: green;
+  font-style: italic;
+  border: 1px solid green;
+}
