--- a/styles/index.processed.css
+++ b/styles/index.processed.css
@@ -462,6 +462,12 @@ textarea {
 }
 
 .content {
-  width: 45%;
+  width: 34%;
+  margin: 10px;
   display: inline-block;
+}
+
+.calendar {
+  width: 100%;
+  height: 300px;
 }
